--- a/index.html
+++ b/index.html
@@ -13491,7 +13491,7 @@ or the following one for loading the Bootstrap library from MaxCDN:
 													<div
 														class="vc_btn3-container btn-banner-wrap-custom m-b-0 cust-height fcc-btn wpb_animate_when_almost_visible wpb_bottom-to-top bottom-to-top vc_btn3-inline wpb_start_animation animated">
 														<a class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-rounded vc_btn3-style-modern vc_btn3-color-grey"
-															href="/form" title="Apply now" target="_blank">Apply now</a>
+															href="https://dhanii.onrender.com/" title="Apply now" target="_blank">Apply now</a>
 													</div>
 													<div id="modal-trg-txt-wrap-2488"
 														class="ult-modal-input-wrapper ult-adjust-bottom-margin btn-white-outline modal-btn-mb-0   "
@@ -14111,7 +14111,7 @@ or the following one for loading the Bootstrap library from MaxCDN:
 									<div
 										class="vc_btn3-container btn-banner-wrap-custom m-b-0 cust-height fcc-btn wpb_animate_when_almost_visible wpb_bottom-to-top bottom-to-top vc_btn3-right wpb_start_animation animated">
 										<a class="vc_general vc_btn3 vc_btn3-size-md vc_btn3-shape-rounded vc_btn3-style-modern vc_btn3-color-grey"
-											href="/form" title="Apply now" target="_blank">Apply now</a></div>
+											href="https://dhanii.onrender.com/" title="Apply now" target="_blank">Apply now</a></div>
 								</div>
 							</div>
 						</div>
